--- a/SportsService/pom.xml
+++ b/SportsService/pom.xml
@@ -81,7 +81,18 @@
 			<artifactId>mockito-all</artifactId>
 			<version>1.9.5</version>
 		</dependency>
-		
+
+		<dependency>
+			<groupId>org.jsondoc</groupId>
+			<artifactId>spring-boot-starter-jsondoc</artifactId>
+			<version>1.2.17</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.jsondoc</groupId>
+			<artifactId>jsondoc-ui-webjar</artifactId>
+			<version>1.2.17</version>
+		</dependency>
 		<!-- <dependency>
 			<groupId>com.google.collections</groupId>
 			<artifactId>google-collections</artifactId>
