--- a/SportsCommon/pom.xml
+++ b/SportsCommon/pom.xml
@@ -54,7 +54,12 @@
 			<artifactId>spring-context</artifactId>
 			<version>${org.springframework-version}</version>
 		</dependency>
-	
+      <dependency>
+          <groupId>org.jsondoc</groupId>
+          <artifactId>jsondoc-core</artifactId>
+          <version>1.1.16</version>
+      </dependency>
+
   </dependencies>
   
   <build>
