--- a/SportsService/pom.xml
+++ b/SportsService/pom.xml
@@ -75,11 +75,12 @@
 			<artifactId>SportsCommon</artifactId>
 			<version>1.0</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.mockito</groupId>
-			<artifactId>mockito-all</artifactId>
-			<version>1.9.5</version>
+			<artifactId>mockito-core</artifactId>
+			<version>2.10.0</version>
+			<scope>test</scope>
 		</dependency>
 
 		<dependency>
